<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_amb"
            android:backgroundTint="@color/red" />

        <TextView
            android:id="@+id/status_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progBar"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/cancel"
            app:cornerRadius="25dp" />

        <LinearLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/where" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRequest"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="Request Ambulance"
                app:cornerRadius="25dp"
                app:icon="@drawable/ic_round_arrow_forward_24"
                app:iconGravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ambulance_number"
                app:boxStrokeWidth="0dp"
                app:startIconDrawable="@drawable/ic_amb"
                app:startIconTint="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAmbNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:editable="false"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hospital"
                app:boxStrokeWidth="0dp"
                app:startIconDrawable="@drawable/ic_location"
                app:startIconTint="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHospital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:editable="false"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:boxStrokeWidth="0dp"
                app:startIconDrawable="@drawable/ic_person_24"
                app:startIconTint="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:editable="false"
                    android:focusable="false" />


            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAccept"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:text="@string/call"
                    app:cornerRadius="25dp" />

                <View
                    android:id="@+id/sep"
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    style="@style/ButtonWhite"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:outlineProvider="none"
                    android:text="@string/cancel"
                    app:strokeColor="@color/red"
                    app:strokeWidth="1dp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <!--    <FrameLayout-->
    <!--        android:clickable="true"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent" />-->

</androidx.cardview.widget.CardView>